FAQ Cells hooked up and working

--- a/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
@@ -22,14 +22,108 @@
                     <view key="view" contentMode="scaleToFill" id="gYa-ny-dFj">
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GW7-qy-CNX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FAQCell" rowHeight="145" id="wtd-jb-N2d" customClass="FAQCell" customModule="DroidconBoston" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="145"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wtd-jb-N2d" id="dNm-BI-I6G">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="144"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilY-PZ-AtA">
+                                                    <rect key="frame" x="16" y="16" width="343" height="112.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ilY-PZ-AtA" firstAttribute="leading" secondItem="dNm-BI-I6G" secondAttribute="leading" constant="16" id="HQ6-Hq-cEy"/>
+                                                <constraint firstAttribute="trailing" secondItem="ilY-PZ-AtA" secondAttribute="trailing" constant="16" id="cIZ-Te-hIP"/>
+                                                <constraint firstItem="ilY-PZ-AtA" firstAttribute="top" secondItem="dNm-BI-I6G" secondAttribute="top" constant="16" id="uru-EU-0IP"/>
+                                                <constraint firstAttribute="bottom" secondItem="ilY-PZ-AtA" secondAttribute="bottom" constant="16" id="w4g-nI-zfZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="answerText" destination="ilY-PZ-AtA" id="3Ml-9F-rkY"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FAQHeader" rowHeight="101" id="rVK-4Q-06g" customClass="FAQHeader" customModule="DroidconBoston" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="173" width="375" height="101"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rVK-4Q-06g" id="OLs-UE-6uw">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FHE-95-5yx" userLabel="top divider">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="jYO-DY-rJ4"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DJr-jF-vA2" userLabel="bottom divider">
+                                                    <rect key="frame" x="0.0" y="99.5" width="375" height="1"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="Gn7-Bq-aET"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question Goes Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSQ-7s-5AO">
+                                                    <rect key="frame" x="16" y="17" width="343" height="66.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="FHE-95-5yx" firstAttribute="leading" secondItem="OLs-UE-6uw" secondAttribute="leading" id="AIK-4n-wVD"/>
+                                                <constraint firstAttribute="bottom" secondItem="DJr-jF-vA2" secondAttribute="bottom" id="BdD-4H-571"/>
+                                                <constraint firstItem="DJr-jF-vA2" firstAttribute="top" secondItem="iSQ-7s-5AO" secondAttribute="bottom" constant="16" id="PlB-RL-09k"/>
+                                                <constraint firstItem="iSQ-7s-5AO" firstAttribute="leading" secondItem="OLs-UE-6uw" secondAttribute="leading" constant="16" id="TFp-fH-M6p"/>
+                                                <constraint firstItem="iSQ-7s-5AO" firstAttribute="top" secondItem="FHE-95-5yx" secondAttribute="bottom" constant="16" id="Wrb-2T-eqC"/>
+                                                <constraint firstItem="DJr-jF-vA2" firstAttribute="leading" secondItem="OLs-UE-6uw" secondAttribute="leading" id="cDl-Tv-X37"/>
+                                                <constraint firstItem="FHE-95-5yx" firstAttribute="top" secondItem="OLs-UE-6uw" secondAttribute="top" id="kQj-ky-JUK"/>
+                                                <constraint firstAttribute="trailing" secondItem="FHE-95-5yx" secondAttribute="trailing" id="kmq-rW-fkB"/>
+                                                <constraint firstAttribute="trailing" secondItem="DJr-jF-vA2" secondAttribute="trailing" id="rZH-eQ-TW7"/>
+                                                <constraint firstAttribute="trailing" secondItem="iSQ-7s-5AO" secondAttribute="trailing" constant="16" id="vaT-Pd-Lta"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="bottomDivider" destination="DJr-jF-vA2" id="tdK-e0-oZB"/>
+                                            <outlet property="questionText" destination="iSQ-7s-5AO" id="Zqb-bs-QpT"/>
+                                            <outlet property="topDivider" destination="FHE-95-5yx" id="SUN-hr-khU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="esn-GG-k49" id="k7J-i9-8or"/>
+                                    <outlet property="delegate" destination="esn-GG-k49" id="LS8-CZ-FW0"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NQA-8a-MSs" firstAttribute="top" secondItem="GW7-qy-CNX" secondAttribute="bottom" id="OoN-0K-3Nh"/>
+                            <constraint firstItem="GW7-qy-CNX" firstAttribute="top" secondItem="YB1-Ov-5yM" secondAttribute="bottom" id="Sm1-Ee-ce6"/>
+                            <constraint firstItem="GW7-qy-CNX" firstAttribute="leading" secondItem="gYa-ny-dFj" secondAttribute="leading" id="XZO-rb-EUf"/>
+                            <constraint firstAttribute="trailing" secondItem="GW7-qy-CNX" secondAttribute="trailing" id="uwK-dN-qY8"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Frequently Asked Questions" id="i24-M9-EDt"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="GW7-qy-CNX" id="Wd3-UU-UYT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fe9-ax-W2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="249" y="-2230"/>
+            <point key="canvasLocation" x="248.80000000000001" y="-2230.434782608696"/>
         </scene>
         <!--Agenda-->
         <scene sceneID="iBZ-VK-Bl1">
@@ -51,7 +145,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ICo-IY-jVg" id="XCi-6I-i7t">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="119"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="saW-yD-Tpf">
@@ -137,7 +231,7 @@
                                         <rect key="frame" x="0.0" y="148" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VPK-NA-hzh" id="hLr-MC-Ca4">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LKg-Pm-6At" userLabel="top">
